@@ -1,3 +1,7 @@
+Mon Sep 29 22:54:29 2008  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* lib/mathn.rb: added String#to_[rc].
+
 Mon Sep 29 20:41:19 2008  Tanaka Akira  <akr@fsij.org>
 
 	* string.c (rb_str_subseq): use rb_str_drop_bytes if possible.
